data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2031.wast
;; 2. **Test Name: `br_table` with Minimum Number of Targets in `else` Block**    - **Description**: This test includes an `if` instruction where the `else` block has a `br_table` instruction with only one target. This tests if the implementation correctly handles the smallest possible target table.    - **Constraint Checked**: Proper handling of `br_table` with minimal target count in `else` blocks.    - **Relation to Edge Case**: Verifies the consistency of handling lower boundary conditions in branching tables within failing conditional paths.

(assert_invalid
  (module (func $br_table_minimal_target_else
    (if (result i32) (i32.const 0)
      (then (i32.const 1))
      (else (br_table 0 (i32.const 1)))
    )
  ))
  "type mismatch"
)